--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # yarn - no zero install
 .yarn/*
-# !.yarn/cache
+!.yarn/cache
 !.yarn/releases
-# !.yarn/plugins
-# !.yarn/sdks
+!.yarn/plugins
+!.yarn/sdks
 !.yarn/versions
 /public
 /dist
