--- a/package.json
+++ b/package.json
@@ -3,41 +3,77 @@
   "version": "1.0.0",
   "description": "A place where I manage to write everything while developing",
   "repository": "https://github.com/lhwdev/devnote",
-  "main": "src/index.ts",
+  "main": "src/index.html",
   "author": "lhwdev <lhwdev6@outlook.com>",
   "license": "Apache-2.0",
   "scripts": {
-    "start": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack-dev-server --env.production=false"
+    "start": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack serve --mode development",
+    "devBuild": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack --mode development",
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
+    "lintFix": "eslint . --ext .ts,.tsx,.js,.jsx --fix"
   },
+  "type": "module",
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "@types/node": "^14.6.4",
-    "@types/webpack": "^4.41.22",
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
+    "@babel/plugin-proposal-optional-chaining": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/plugin-transform-typescript": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.1",
+    "@babel/preset-typescript": "^7.12.1",
+    "@types/marked": "^1.1.0",
+    "@types/node": "^14.11.10",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
     "@types/webpack-dev-server": "^3.11.0",
-    "@typescript-eslint/eslint-plugin": "^4.1.0",
-    "@typescript-eslint/parser": "^4.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
+    "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
-    "eslint": "^7.8.1",
+    "css-loader": "^5.0.0",
+    "eslint": "^7.11.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-loader": "^4.0.2",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsdoc": "^30.4.0",
-    "eslint-plugin-prefer-arrow": "^1.2.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-react": "^7.21.4",
+    "eslint-plugin-unused-imports": "^0.1.3",
+    "highlight.js": "^10.2.1",
+    "html-loader": "^1.3.2",
+    "html-webpack-plugin": "^4.5.0",
+    "js-yaml": "^3.14.0",
+    "marked": "^1.2.0",
+    "mini-css-extract-plugin": "^1.0.0",
     "pnp-webpack-plugin": "^1.6.4",
-    "ts-loader": "^8.0.3",
+    "posthtml": "^0.13.4",
+    "posthtml-expressions": "^1.5.0",
+    "posthtml-loader": "^2.0.1",
+    "posthtml-match-helper": "^1.0.1",
+    "posthtml-parser": "^0.5.0",
+    "resolve-url-loader": "^3.1.1",
+    "sass": "^1.27.0",
+    "sass-loader": "^10.0.3",
+    "shiki": "^0.2.6",
+    "speed-measure-webpack-plugin": "^1.3.3",
+    "style-loader": "^2.0.0",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.0.2",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
+    "typescript": "^4.0.3",
+    "webpack": "^5.1.3",
+    "webpack-build-notifier": "^2.1.0",
+    "webpack-cli": "^4.0.0",
     "webpack-dev-server": "^3.11.0"
-  },
-  "resolutions": {
-    "@types/webpack": "^4.41.22"
   },
   "installConfig": {
     "pnp": true
+  },
+  "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.12.1",
+    "@babel/runtime": "^7.12.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0"
   }
 }
