--- a/tsconfig-for-eslint.json
+++ b/tsconfig-for-eslint.json
@@ -1,3 +1,4 @@
+// stub for linting
 {
   "compilerOptions": {
     "experimentalDecorators": true,
@@ -12,7 +13,5 @@
     "outDir": "dist",
     "lib": ["dom", "es6"]
   },
-  "include": [
-    "src/**/*"
-  ],
+  "include": ["**/*"]
 }
