--- a/tsconfig-for-webpack-config.json
+++ b/tsconfig-for-webpack-config.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es5",
-    "esModuleInterop": true
+    "target": "es6",
+    "esModuleInterop": true,
+		"allowSyntheticDefaultImports": true,
+    "allowJs": true,
+    "moduleResolution": "node",
+		"downlevelIteration": true
   }
 }
