--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
     "js-yaml": "^3.14.0",
+    "markdown-yaml-metadata-parser": "^2.1.1",
     "marked": "^1.2.0",
     "mini-css-extract-plugin": "^1.0.0",
     "pnp-webpack-plugin": "^1.6.4",
@@ -73,6 +74,8 @@
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.12.1",
     "@babel/runtime": "^7.12.1",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
   }
